--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sankalpa: The Dawn of Wisdom</title>
   </head>
   <body>
+    <button id="play-music-btn" style="position:fixed;top:20px;right:20px;z-index:1000;padding:10px 20px;font-size:1.2em;">Play Music</button>
     <div id="app-container">
       <div id="loader-screen">
         <h1>Sankalpa</h1>
